--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-# Data Collection and Processing
-beautifulsoup4==4.12.2
+# Web Scraping
 requests==2.31.0
+beautifulsoup4==4.12.2
 selenium==4.15.2
+webdriver-manager==4.0.1
+
+# Telegram Integration
+telethon==1.32.1
+cryptg==0.4.0
+
+# Data Processing
 pandas==2.1.3
 numpy==1.26.2
+
+# Utilities
+schedule==1.2.1
+python-dotenv==1.0.0
+tqdm==4.66.1
 
 # Persian Text Processing
 hazm==0.9.0
@@ -11,28 +23,30 @@ persian-tools==0.0.8
 
 # Machine Learning
 scikit-learn==1.3.2
-xgboost==2.0.2
-tensorflow==2.15.0
-keras==2.15.0
+transformers==4.35.2
+torch==2.1.1
+
+# API
+fastapi==0.104.1
+uvicorn==0.24.0
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# Documentation
+sphinx==7.2.6
+sphinx-rtd-theme==1.3.0
 
 # Data Visualization
 matplotlib==3.8.2
 seaborn==0.13.0
 plotly==5.18.0
 
-# API Development
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-
-# Testing
-pytest==7.4.3
-pytest-cov==4.1.0
-
-# Utilities
-tqdm==4.66.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
+# Machine Learning
+xgboost==2.0.2
+tensorflow==2.15.0
+keras==2.15.0
 
 # Jupyter
 jupyter==1.0.0
